@@ -1,4 +1,6 @@
 HEAD
+	+ Updated the view code to use
+	  EBox::Users::InetOrgPerson::generatedFullname API
 	+ Documented and made EBox::Users::InetOrgPerson::generatedFullname method
 	  more robust
 	+ Added basic format check for InetOrgPerson fields
